--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -112,4 +112,188 @@
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   z-index: 1;
 }
+
+.wrapper .second-section {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 980px;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 0 30px;
+  position: relative;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.wrapper .second-section .left-section,
+.wrapper .second-section .right-section {
+  position: relative;
+  height: 100%;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+}
+
+.wrapper .second-section .left-section .character-item,
+.wrapper .second-section .right-section .character-item {
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  position: relative;
+}
+
+.wrapper .second-section .left-section .character-item .character-name-layout,
+.wrapper .second-section .right-section .character-item .character-name-layout {
+  font-family: Questrial;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 36px;
+  line-height: 37px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+  color: #00B6F0;
+  position: absolute;
+  padding: 30px 50px;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
+.wrapper .second-section .left-section .character-item .character-name-layout .character-name,
+.wrapper .second-section .right-section .character-item .character-name-layout .character-name {
+  z-index: 1;
+}
+
+.wrapper .second-section .left-section .character-item .character-name-layout img,
+.wrapper .second-section .right-section .character-item .character-name-layout img {
+  width: 100%;
+  height: 100%;
+  left: 0;
+  position: absolute;
+}
+
+.wrapper .second-section .left-section .character-item img,
+.wrapper .second-section .right-section .character-item img {
+  max-height: 100%;
+}
+
+.wrapper .second-section .left-section .character-item.offset {
+  margin-left: -350px;
+}
+
+.wrapper .second-section .left-section .character-name-layout {
+  left: 10px;
+  top: -80px;
+  -webkit-transform: rotate(-11.16deg);
+          transform: rotate(-11.16deg);
+}
+
+.wrapper .second-section .right-section .character-item.offset {
+  margin-right: -350px;
+}
+
+.wrapper .second-section .right-section .character-name-layout {
+  right: 10px;
+  top: -80px;
+  -webkit-transform: rotate(11.16deg);
+          transform: rotate(11.16deg);
+}
+
+.wrapper .second-section .middle-section {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  z-index: 2;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin-top: 50px;
+}
+
+.wrapper .second-section .middle-section .logo {
+  width: 290px;
+  height: 290px;
+}
+
+.wrapper .second-section .middle-section .title-wrapper {
+  position: relative;
+  width: 478px;
+  height: 153px;
+  -webkit-transform: rotate(-4deg);
+          transform: rotate(-4deg);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.wrapper .second-section .middle-section .title-wrapper img {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+.wrapper .second-section .middle-section .title-wrapper .title-layout {
+  z-index: 1;
+}
+
+.wrapper .second-section .middle-section .title-wrapper .title {
+  font-family: Questrial;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 48px;
+  line-height: 49px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  color: #FFFFFF;
+  text-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.wrapper .second-section .middle-section .title-wrapper .title.primary {
+  color: var(--primary-color);
+}
 /*# sourceMappingURL=home.css.map */
