--- a/src/components/CenterHeader/centerHeader.scss
+++ b/src/components/CenterHeader/centerHeader.scss
@@ -3,13 +3,8 @@
     * {
         height: 100%;
     }
+    justify-content: center !important;
     padding: 0!important;
-
-    // border-bottom: 1px solid rgba(90, 156, 255, 0.5);
-    // border-top: 1px solid rgba(90, 156, 255, 0.5);
-    // box-shadow: 0px 4px 4px rgba(90, 156, 255, 0.25);
-    // background-color:  rgba(39, 61, 77, 0.8);
-    // background-image: linear-gradient(90deg, rgba(0,0,0,0) 0%, rgba(39, 61, 77, 0) 10%, rgba(39, 61, 77, 0.8) 10%, rgba(39, 61, 77, 0.8) 90%, rgba(39, 61, 77, 0) 90%, rgba(0, 0, 0, 0) 100%);
     background-size: cover;
     background-repeat: no-repeat;
     height: 100%;
@@ -21,10 +16,17 @@
         display: flex;
         justify-content: space-around;
     }
+    
 }
-.navbar-light .navbar-nav .nav-link {
+.navbar-dark .navbar-toggler-icon {
+    height: 80%;
+}
+.navbar-dark .navbar-nav .nav-link {
     color: white !important;
     padding: 0!important;
+}
+.navbar-dark .navbar-toggler {
+    padding: 0 !important;
 }
 
 .nav-list {
@@ -39,8 +41,9 @@
         padding: 10px;
         .menu-background-img {
             position: absolute;
+            height: auto;
+            width: 3vw;
             height: 50px;
-            width: 60px;
             left: calc(50% - 30px);
             opacity: 0.5;
         }
@@ -53,13 +56,31 @@
             font-family: Prompt;
             font-style: normal;
             font-weight: normal;
-            font-size: 21px;
+            font-size: 1.5vw;
             line-height: 32px;
             color: white;
             text-transform: uppercase;
         }
     }
     .menu-item:not(:last-child) {
-        border-right: 1px solid var(--primary-color) !important;
+        border-right: 1px solid var(--primary-color) ;
+    }
+}
+
+@media(max-width: 991px) {
+    .nav-list {
+        .menu-background-img {
+            display: none;
+        }
+        align-items: center;
+        background: rgb(12, 29, 61);
+        width: fit-content;
+    }
+    .navbar-center {
+        height: fit-content;
+    }
+    .menu-item {
+        padding: 0;
+        border-right: none !important;
     }
 }
