--- a/src/components/LeftHeader/leftHeader.css
+++ b/src/components/LeftHeader/leftHeader.css
@@ -9,19 +9,84 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 16px 10px;
   position: relative;
 }
 
-.left-pageHeader-wrapper .logo-img {
-  width: 108px;
-  height: 100px;
-  margin-right: 20px;
+.left-pageHeader-wrapper .background {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: 0;
 }
 
-.left-pageHeader-wrapper .logo-title {
-  width: 295px;
-  height: 59px;
-  margin-bottom: 20px;
+.left-pageHeader-wrapper .content-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 16px 30px 16px 10px;
+}
+
+.left-pageHeader-wrapper .logo-wrapper {
+  width: 20%;
+  z-index: 1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  height: 100%;
+}
+
+.left-pageHeader-wrapper .logo-wrapper img {
+  width: 100%;
+  max-height: 95%;
+}
+
+.left-pageHeader-wrapper .logo-title-wrapper {
+  width: 75%;
+  z-index: 1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  height: 100%;
+  max-height: 95%;
+}
+
+.left-pageHeader-wrapper .logo-title-wrapper img {
+  width: 85%;
+}
+
+@media (min-width: 2000px) {
+  .left-pageHeader-wrapper .background {
+    width: 100%;
+    height: auto;
+  }
+}
+
+@media (max-width: 767px) {
+  .left-pageHeader-wrapper .logo-wrapper img {
+    width: 34px;
+    height: 32px;
+  }
+  .left-pageHeader-wrapper .logo-title-wrapper img {
+    width: 97px;
+    height: 19px;
+  }
 }
 /*# sourceMappingURL=leftHeader.css.map */
