--- a/src/components/LeftHeader/leftHeader.scss
+++ b/src/components/LeftHeader/leftHeader.scss
@@ -5,16 +5,67 @@
     height: 100%;
     display: flex;
     align-items: center;
-    padding: 16px 10px;
     position: relative;
-    .logo-img {
-        width: 108px;
-        height: 100px;
-        margin-right: 20px;
+    .background {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        z-index: 0;
     }
-    .logo-title {
-        width: 295px;
-        height: 59px;
-        margin-bottom: 20px;
+    .content-wrapper {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 16px 30px 16px 10px;
+    }
+    .logo-wrapper {
+        width: 20%;
+        z-index: 1;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 100%;
+        img {
+            width: 100%;
+            max-height: 95%;
+        }
+    }
+    .logo-title-wrapper {
+        width: 75%;
+        z-index: 1;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 100%;
+        img {
+            width: 85%;
+        }
+        max-height: 95%;
+    }
+    
+}
+
+@media(min-width: 2000px) {
+    .left-pageHeader-wrapper {
+        .background {
+            width: 100%;
+            height: auto;
+        }
+    }
+}
+@media(max-width: 767px) {
+    .left-pageHeader-wrapper {
+        .logo-wrapper {
+            img {
+                width: 34px;
+                height: 32px;
+            }
+        }
+        .logo-title-wrapper {
+            img {
+                width: 97px;
+                height: 19px;
+            }
+        }
     }
 }
