--- a/src/components/PageHeader/pageHeader.scss
+++ b/src/components/PageHeader/pageHeader.scss
@@ -5,7 +5,7 @@
     display: flex;
     position: absolute;
     .left-wrapper {
-        width: 536px;
+        width: 25vw;
         height: 120px;
         z-index: 2;
     }
@@ -14,11 +14,57 @@
         margin: 0 -84px;
         height: 75px;
         z-index: 1;
+        border-top: 1px solid #00B6F077;
+        // border-bottom: 1px solid var(--primary-color);
+        box-shadow: 0 2px 4px 0 #00B6F077;
+
     }
     .right-wrapper {
-        width: 536px;
+        width: 25vw;
         height: 120px;
         z-index: 2;
+    }
+}
+
+@media screen and (max-width: 991px) and (min-width: 768px) {
+    .page-header-wrapper {
+        .left-wrapper {
+            width: 25vw;
+            height: 78px;
+            z-index: 2;
+        }
+        .center-wrapper {
+            flex: 1;
+            margin: 0 -84px;
+            height: 48px;
+            z-index: 1;
+        }
+        .right-wrapper {
+            width: 25vw;
+            height: 78px;
+            z-index: 2;
+        }
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .page-header-wrapper {
+        .left-wrapper {
+            width: 160px;
+            height: 39px;
+            z-index: 2;
+        }
+        .center-wrapper {
+            flex: 1;
+            margin: 0 -84px;
+            height: 24px;
+            z-index: 1;
+        }
+        .right-wrapper {
+            width: 160px;
+            height: 39px;
+            z-index: 2;
+        }
     }
 }
 
