--- a/src/components/PlayNow/playNow.scss
+++ b/src/components/PlayNow/playNow.scss
@@ -3,33 +3,33 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 86px 64px;
-    width: 603px;
-    height: 880px;
+    padding: 4vw;
+    width: 35vw;
+    height: 50vw;
     background: rgba(12, 29, 61, 0.5);
     border-radius: 24px;
     position: relative;
+
     .background-img {
         opacity: 0.05;
         width: 90%;
-        height: auto;   
+        height: auto;
         position: absolute;
         top: 0;
     }
+
     .logo {
-        width: 291px;
-        height: 269px;
+        width: 11vw;
     }
 
     .logo-text {
-        widtH: 435px;
-        height: 87px;
-        margin: 23px auto 51px auto;
+        width: 20vw;
+        margin: 1vw auto 2vw auto;
     }
 
     .text-wrapper {
         border: 2px solid var(--primary-color);
-        border-radius: 37px;
+        border-radius: 2.5vw;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -42,14 +42,15 @@
             text-align: center;
             font-style: normal;
             font-weight: normal;
-            font-size: 28px;
-            line-height: 29px;
+            font-size: 2vw;
+            line-height: 2vh;
             display: flex;
             align-items: center;
             text-align: center;
             text-transform: uppercase;
             color: #FF8B02;
             text-shadow: 1px 1px 1px rgba(255, 255, 255, 0.1);
+            margin: 0;
         }
 
         .description {
@@ -57,20 +58,52 @@
             font-family: Questrial;
             font-style: normal;
             font-weight: normal;
-            font-size: 21px;
-            line-height: 22px;
+            font-size: 1.5vw;
+            line-height: 1.5vw;
             display: flex;
             align-items: center;
             text-align: center;
             text-transform: uppercase;
             color: #FFFFFF;
             text-shadow: 1px 1px 1px rgba(255, 255, 255, 0.1);
-            padding: 20px 0;
+            padding: 1vw 0;
         }
     }
+
     .play-button {
-        width: 241px;
-        height: 86px;
-        margin-top: 62px;
+        width: 12vw;
+        margin-top: 3vw;
+    }
+}
+
+@media(max-width: 767px) {
+    .play-now-wrapper {
+        width: 90vw;
+        height: 566px;
+        .text-wrapper {
+            padding: 10px 10%;
+            .title {
+                font-size: 18px;
+                line-height: 20px;;
+            }
+            .description {
+                font-size: 18px;
+                line-height: 18px;
+            }
+        }
+        .logo {
+            width: 187px;
+            height: 173px;
+        }
+        .logo-text {
+            width: 280px;
+            height: 56px;
+            margin: 18px auto 32px auto;
+        }
+        .play-button {
+            width: 155px;
+            height: 55px;
+            margin-top: 32px;
+        }
     }
 }
