--- a/src/components/RightHeader/rightHeader.scss
+++ b/src/components/RightHeader/rightHeader.scss
@@ -6,28 +6,39 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    padding: 16px 10px 16px 75px;
+    position: relative;
+    .background {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        z-index: 0;
+    }
+    .content-wrapper {
+        padding: 16px 10px 16px 2.5vw;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        width: 100%;
+        z-index: 1;
+    }
     .logo-img {
-        width: 96px;
-        height: 70px;
-        margin-right: 20px;
-        margin-bottom: 20px;
+        width: 6vw;
+        border-right: 2px solid var(--primary-color);
+        padding-right: 1.5vw;
     }
     .avatar {
-        width: 67px;
-        height: 79px;
+        width: 3vw;
         border: 5px solid #5dbce7;
         border-top-right-radius: 12px;
         border-bottom-left-radius: 12px;
-        padding: 10px;
+        padding: 0.2vw;
+        background-color: white;
     }
-    .divider {
-        width: 23px;
-        height: 100%;
-    }
+    
     .header-connect {
-        height: 63px;
-        width: 170px;
+        width: 10vw;
+        height: 3vw;
+        margin-left: 1.5vw;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -36,5 +47,62 @@
         box-sizing: border-box;
         filter: drop-shadow(4px 4px 4px rgba(0, 255, 255, 0.25));
         border-radius: 8px;
+        font-size: 2vw;
+    }
+    .setting {
+        display: none;
+    }
+}
+
+
+@media(min-width: 2000px) {
+    .right-pageHeader-wrapper {
+        .background {
+            width: 100%;
+            height: auto;
+        }
+    }
+}
+
+@media(max-width: 991px) {
+    .right-pageHeader-wrapper {
+        .setting {
+            display: flex;
+        }
+        .header-connect {
+            display: none;
+        }
+    }
+}
+@media(max-width: 767px) {
+    .right-pageHeader-wrapper {
+        .avatar {
+            width: 114px;
+            height: 104px;
+            right: 0;
+            top: -50px;
+            bottom: 100%;
+            border: 5px solid #5dbce7;
+            border-top-right-radius: 12px;
+            border-bottom-left-radius: 12px;
+            padding: 0.2vw;
+            position: absolute;
+        }
+        .setting {
+            width: 19px;
+            height: 17px;
+        }
+        .logo-img {
+            width: 29px;
+            height: 21px;
+        }
+        .content-wrapper {
+            padding: 16px 10px 16px 20px;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            width: 100%;
+            z-index: 1;
+        }
     }
 }
