--- a/src/pages/Layout/layout.css
+++ b/src/pages/Layout/layout.css
@@ -7,4 +7,10 @@
   background-size: cover;
   background-repeat: no-repeat;
 }
+
+@media (max-width: 767px) {
+  .page-layout {
+    padding-top: 50px;
+  }
+}
 /*# sourceMappingURL=layout.css.map */
